--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,14 @@
+# set theme to Cayman
 theme: jekyll-theme-cayman
+
+# recommended configuration from github pages documentation
+lsi: false
+safe: true
+source: [your repo's top level directory]
+incremental: false
+highlighter: rouge
+gist:
+  noscript: false
+kramdown:
+  math_engine: mathjax
+  syntax_highlighter: rouge
