--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ theme: jekyll-theme-cayman
 # recommended configuration from github pages documentation
 lsi: false
 safe: true
-source: [your repo's top level directory]
+source: index.html # [your repo's top level directory]
 incremental: false
 highlighter: rouge
 gist:
