--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,12 @@
+##build settings
 theme: jekyll-theme-cayman
+
+##configuration variables
+title: Riley Horn
+##[The title of your site]
+description: Professional Portfolio
+##[A short description of your site's purpose]
+##show_downloads: 
+##["true" or "false" to indicate whether to provide a download URL]
+##google_analytics: 
+##[Your Google Analytics tracking ID]
